fixing the UI on mobile and handling when the image is missing

--- a/styles/bestseller.module.css
+++ b/styles/bestseller.module.css
@@ -165,7 +165,7 @@
     display: none;
   }
   .itemBody {
-    height: 160px;
+    height: 205px;
   }
   .Hide {
     display: block;
